#2, #3 - upgrade to Java 19 and Spring Boot 3 with side effects: (#8)
- use openFeign for nasa client instead of jersey
- convert @Value usages to ConfigurationProperties classes
- general cleanup